--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       </div>
     </div>
       <div class="main-section-col2">
-        <img src="images/hero.png" class="rounded float-end" alt="..." />
+        <img src="./images/hero.png" class="rounded float-end" alt="..." />
       </div>
     </div>
     <!-- service-section -->
@@ -73,7 +73,7 @@
          
           <div class="card1">
             <div class="overlay">
-            <img src="/images/icon.png" alt="icon" />
+            <img src="./images/icon.png" alt="icon" />
             <div class="card-body">
               <h5 class="card-title">WEB DEVELOPMENT</h5>
               <p class="card-text">
@@ -88,7 +88,7 @@
         </div> 
         <div class="card2">
           <div class="overlay">
-          <img src="/images/icon.png"  alt="icon" />
+          <img src="./images/icon.png"  alt="icon" />
           <div class="card-body">
             <h5 class="card-title">WEB DEVELOPMENT</h5>
             <p class="card-text">
@@ -103,7 +103,7 @@
       </div> 
       <div class="card3">
         <div class="overlay">
-        <img src="/images/icon.png" alt="icon" />
+        <img src="./images/icon.png" alt="icon" />
         <div class="card-body">
           <h5 class="card-title">WEB DEVELOPMENT</h5>
           <p class="card-text">
@@ -118,9 +118,9 @@
     </div> 
       </div>
       <div class="img-slider-section2">
-        <img src="/images/dot.png" />
-        <img src="/images/dot.png" />
-        <img src="/images/dot.png" />
+        <img src="./images/dot.png" />
+        <img src="./images/dot.png" />
+        <img src="./images/dot.png" />
       </div>
     </div>
     <!-- project-section -->
@@ -129,24 +129,24 @@
       <h1>WHY WE ARE BEST</h1>
       <div class="project-section-col">
         <div class="project-section-col1">
-        <img src="/images/better strategy.png" id="colimage"/>
+        <img src="./images/better strategy.png" id="colimage"/>
       </div>
       <div class="project-section-col2">
-        <div onclick="changeImage('/images/better.jpg')"class="col1">
+        <div onclick="changeImage('./images/better.jpg')"class="col1">
           <h6>Genderless kei - japan's hot</h6>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod
             consequatur dignissimos placeat?
           </p>
         </div>
-        <div onclick="changeImage('/images/better strategy.png')"class="col2">
+        <div onclick="changeImage('./images/better strategy.png')"class="col2">
           <h6>Better strategy & quality</h6>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod
             consequatur dignissimos placeat?
           </p>
         </div>
-        <div onclick="changeImage('/images/quality.jpg')"class="col3">
+        <div onclick="changeImage('./images/quality.jpg')"class="col3">
           <h6>Genderless kei - japan's hot</h6>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod
@@ -162,7 +162,7 @@
       <h1>WHY WE ARE BEST</h1>
       <div class="feature-section-col">
         <div class="feature-section-col1">
-          <img src="/images/1.png" />
+          <img src="./images/1.png" />
           <h5>Clarified Vision & Target</h5>
           <p>
             Lorem ipsum dolor sit amet consectetur elit. lorem minus soluta,
@@ -170,7 +170,7 @@
           </p>
         </div>
         <div class="feature-section-col2">
-          <img src="/images/2.png" />
+          <img src="./images/2.png" />
           <h5>High Performance</h5>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam
@@ -178,7 +178,7 @@
           </p>
         </div>
         <div class="feature-section-col3">
-          <img src="/images/3.png" />
+          <img src="./images/3.png" />
           <h5>Maintain Security</h5>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam
@@ -186,7 +186,7 @@
           </p>
         </div>
         <div class="feature-section-col4">
-          <img src="/images/4.png" />
+          <img src="./images/4.png" />
           <h5>Better Strategy & Quality</h5>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam
@@ -204,28 +204,28 @@
       <h1>OUR COMPANY GROWTH</h1>
       <div class="card-section">
         <div class="card">
-          <img src="/images/heart.png" alt="heart" class="card-img-top" />
+          <img src="./images/heart.png" alt="heart" class="card-img-top" />
           <div class="card-body">
             <h5 class="card-title">199+</h5>
             <p class="card-text">Staticfied Customers</p>
           </div>
         </div>
         <div class="card">
-          <img src="/images/clock.png" alt="clock" class="card-img-top" />
+          <img src="./images/clock.png" alt="clock" class="card-img-top" />
           <div class="card-body">
             <h5 class="card-title">1591+</h5>
             <p class="card-text">Days of Operation</p>
           </div>
         </div>
         <div class="card">
-          <img src="/images/check.png" alt="check" class="card-img-top" />
+          <img src="./images/check.png" alt="check" class="card-img-top" />
           <div class="card-body">
             <h5 class="card-title">283+</h5>
             <p class="card-text">Complete Project</p>
           </div>
         </div>
         <div class="card">
-          <img src="/images/trophy.png" alt="trophy" class="card-img-top" />
+          <img src="./images/trophy.png" alt="trophy" class="card-img-top" />
           <div class="card-body">
             <h5 class="card-title">75+</h5>
             <p class="card-text">Win Awards</p>
@@ -238,7 +238,7 @@
       <h5>CLIENT'S FEEDBACK</h5>
       <h1>PEOPLE SAY'S ABOUT US!</h1>
       <p>
-        <img src="/images/quotomark.png" />Lorem, ipsum dolor sit amet
+        <img src="./images/quotomark.png" />Lorem, ipsum dolor sit amet
         consectetur adipis elit. Dignissimos quidem laborum assumenda
         voluptates? Corrupti qui mollitia quo earum dignissimos natus quos odit.
       </p>
