--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
       </div> 
       <div class="card3">
         <div class="overlay">
-        <img src="./Images/icon.png" alt="icon" />
+        <img src="/Images/icon.png" alt="icon" />
         <div class="card-body">
           <h5 class="card-title">WEB DEVELOPMENT</h5>
           <p class="card-text">
@@ -118,9 +118,9 @@
     </div> 
       </div>
       <div class="img-slider-section2">
-        <img src="./Images/dot.png" />
-        <img src="./Images/dot.png" />
-        <img src="./Images/dot.png" />
+        <img src="/Images/dot.png" />
+        <img src="/Images/dot.png" />
+        <img src="/Images/dot.png" />
       </div>
     </div>
     <!-- project-section -->
@@ -238,7 +238,7 @@
       <h5>CLIENT'S FEEDBACK</h5>
       <h1>PEOPLE SAY'S ABOUT US!</h1>
       <p>
-        <img src="./Images/quotomark.png" />Lorem, ipsum dolor sit amet
+        <img src="/Images/quotomark.png" />Lorem, ipsum dolor sit amet
         consectetur adipis elit. Dignissimos quidem laborum assumenda
         voluptates? Corrupti qui mollitia quo earum dignissimos natus quos odit.
       </p>
